# contracts-boilerplate

./: .env.example  .gitignore  README.md  bun.lockb  deno.json  index.html  package-lock.json  package.json  tsconfig.json  vitest.workspace.ts
.github/workflows/: lint.yml  pages.yml
benchmark/: CLAUDE.md  DEVELOPMENT.md  contracts.ts  datasets.ts  debug-categories.ts  generate-html-report.ts  html-report.ts  import-pov.ts  lib.ts  opcode-categories.ts  reports-evm-pvm-summary.ts  reports.ts  run.sh
benchmark/contracts/: ethereum-contracts.ts  hackm3-contracts.ts  mark3t-contracts.ts  mixed-workloads-contracts.ts  protocol-commons-contracts.ts  test-contracts.ts  w3s-contracts.ts
benchmark/html-report/: charts.ts  queries.ts  styles.ts  templates.ts
benchmark/reports/: benchmark_report.html  benchmark_report.md  bytecode_size_comparison.md  category_analysis.md  contract_comparison.md  evm_pvm_summary.md  opcode_analysis.md
cargo-pvm/: Cargo.toml  README.md
cargo-pvm/src/: main.rs
cli/: bench_deploy.ts  bench_execute.ts  cointool-playground.ts  dao-hack-opcode-traces.ts  dao-hack-traces.ts  dao-hack.tsx  dao-playground.ts  delegatecall-playground.ts  fib-playground.ts  playground.ts  playground_2.ts  pretrace-playground.ts  storage-bench.ts  storage-playground.ts  test-gascost-meaning.ts  token_benchmark.ts  token_deploy.ts  token_execute.ts  token_playground.ts
codegen/: abis.ts  addresses.ts
codegen/abi/: Dao.ts  DaoAttacker.ts  IDao.ts
codegen/bytecode/: Dao.polkavm  DaoAttacker.polkavm
contracts/: BenchERC1155.sol  BenchERC20.sol  BenchERC721.sol  BenchStorage.sol  Caller.sol  Computation.sol  DocumentAccessManagement.sol  Fibonacci.sol  MagicWord.sol  Mark3tMarketplaceProxy.sol  Mark3tProxyAdmin.sol  MintExample.sol  MockERC20.sol  MyToken.sol  Pretrace.sol  StateChanger.sol  StaticCaller.sol  Storage.sol  TerminateTest.sol  Test.sol  bug.sol  cointool.sol  dao_hack.sol  delegatecall_proxy.sol  fibonacci.sol  flipper.sol  gas_tracing.sol  incrementer.sol  issue_1.sol  simple_token.sol  storage.sol  storage_bench.sol  tether.sol  usdc.sol  usdc_implementation.sol  xen_token.sol
contracts/ethereum-contracts/: xen_minter.sol
contracts/mixed-workloads/: MixedWorkloads.sol
contracts/original/: usdc.sol  usdc_implementation.sol  usdc_proxy.sol
ethers/: .gitignore  README.md  bun.lockb  index.html  package.json
ethers/contracts/: Token.sol
ethers/src/: main.tsx
ethers/tools/: deploy.ts
ink/bench_erc1155/: Cargo.toml  lib.rs
ink/bench_erc20/: lib.rs  (+1 more)
rust/: rust-toolchain.toml
rust/contract_no_alloc/: Cargo.toml
rust/contract_with_alloc/: Cargo.toml
rust/contracts/: Cargo.toml  Fibonacci.sol  MyToken.sol  MyToken_u32.sol
rust/contracts/.cargo/: config.toml
rust/contracts/src/: erc20_with_alloc.rs  fibonacci.rs  fibonacci_u128.rs  fibonacci_u256.rs  fibonacci_u256_iter.rs  fibonacci_u256_iter_primitive_types.rs  fibonacci_u256_primitive_types.rs  fibonacci_u32.rs  fibonacci_u32_macro_bump_alloc.rs  fibonacci_u32_macro_no_alloc.rs  simple_token_macro_bump_alloc.rs  simple_token_macro_no_alloc.rs  simple_token_no_alloc.rs  simple_token_u128_no_alloc.rs  simple_token_u256_no_alloc.rs  simple_token_u32_macro_no_alloc.rs  simple_token_u32_no_alloc.rs  simple_token_with_alloc.rs
rust/protocol-commons/: Cargo.toml  Makefile  riscv64emac-unknown-none-polkavm.json
rust/protocol-commons/common/: Cargo.toml
rust/protocol-commons/common/src/: alloc.rs  dispatch.rs  events.rs  hash.rs  lib.rs  storage.rs  types.rs
rust/protocol-commons/dotns/: Cargo.toml
rust/protocol-commons/dotns/src/: main.rs
rust/protocol-commons/escrow/: Cargo.toml
rust/protocol-commons/escrow/src/: main.rs
rust/protocol-commons/fungible_credential/: Cargo.toml
rust/protocol-commons/fungible_credential/src/: main.rs
rust/protocol-commons/key_registry/: Cargo.toml
rust/protocol-commons/key_registry/src/: main.rs
rust/protocol-commons/log/: Cargo.toml
rust/protocol-commons/log/src/: main.rs
rust/protocol-commons/non_fungible_credential/: Cargo.toml
rust/protocol-commons/non_fungible_credential/src/: main.rs
rust/protocol-commons/rust/dotns/: Cargo.toml  Makefile
rust/protocol-commons/rust/escrow/: Cargo.toml  Makefile
rust/protocol-commons/rust/fungible_credential/: Cargo.toml  Makefile
rust/protocol-commons/rust/key_registry/: Cargo.toml  Makefile
rust/protocol-commons/rust/key_registry/src/: main.rs
rust/protocol-commons/rust/log/: Cargo.toml  Makefile
rust/protocol-commons/rust/log/src/: main.rs
rust/protocol-commons/rust/non_fungible_credential/: Cargo.toml  Makefile
rust/protocol-commons/rust/store/: Cargo.toml  Makefile
rust/protocol-commons/rust/store/.cargo/: config.toml
rust/protocol-commons/store/: Cargo.toml
rust/protocol-commons/store/src/: main.rs
rust/pvm-dsl-contracts/: BenchERC1155.sol  Cargo.toml  Fibonacci.sol  SimpleToken.sol
rust/pvm-dsl-contracts/.cargo/: config.toml
rust/pvm-dsl-contracts/src/: bench_erc1155_dsl.rs  bench_erc20_dsl.rs  bench_erc721_dsl.rs  bench_storage_dsl.rs  computation_dsl.rs  fibonacci_u32_dsl.rs  flipper_dsl.rs  incrementer_dsl.rs  simple_token_u256_dsl.rs
rust/pvm-macro-contracts/: BenchERC1155.sol  BenchERC20.sol  BenchERC721.sol  BenchStorage.sol  Cargo.toml  Computation.sol  Fibonacci.sol  flipper.sol  incrementer.sol
rust/pvm-macro-contracts/src/: bench_erc1155_macro.rs  bench_erc20_macro.rs  bench_erc721_macro.rs  bench_storage_macro.rs  computation_macro.rs  fibonacci_u32_macro.rs  flipper_macro.rs  incrementer_macro.rs  simple_token_u256_macro.rs
scripts/: build_contracts.sh  build_tokens.sh  dev_node.sh  node-env.sh  re-run-all.sh  re-sign-all.sh
src/: main.tsx  wagmi.ts
stackblitz/: addresses.ts
stylus/bench_storage/: Cargo.toml
stylus/bench_storage/src/: lib.rs
tests/: dao.test.ts  test-setup.ts
tools/: build.ts  deploy.ts
utils/: build.ts  index.ts  logger.ts
viem/: .env.example  .gitignore  README.md  bun.lockb  deno.json  package-lock.json  package.json
web/: index.css
web3/: .env.example  .gitignore  README.md  bun.lockb  package.json
(+119 files in other folders)
