[package]
name = "contract_with_alloc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "contract"
path = "src/contract.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.30.0" }
alloy-core = { version = "0.8.0", default-features = false, features = ["sol-types"] }
picoalloc = "5.2.0"
pallet-revive-uapi = { version = "0.9.0", default-features = false }




