[package]
name = "contracts"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[[bin]]
name = "simple_token_u32_no_alloc"
path = "src/simple_token_u32_no_alloc.rs"

[[bin]]
name = "simple_token_u128_no_alloc"
path = "src/simple_token_u128_no_alloc.rs"

[[bin]]
name = "simple_token_with_alloc"
path = "src/simple_token_with_alloc.rs"

[[bin]]
name = "simple_token_u256_no_alloc"
path = "src/simple_token_u256_no_alloc.rs"

[[bin]]
name = "simple_token_u32_macro_no_alloc"
path = "src/simple_token_u32_macro_no_alloc.rs"

[[bin]]
name = "simple_token_u256_macro_no_alloc"
path = "src/simple_token_u256_macro_no_alloc.rs"

[[bin]]
name = "simple_token_u256_macro_bump_alloc"
path = "src/simple_token_u256_macro_bump_alloc.rs"

[[bin]]
name = "fibonacci_u32"
path = "src/fibonacci_u32.rs"

[[bin]]
name = "fibonacci_u128"
path = "src/fibonacci_u128.rs"

[[bin]]
name = "fibonacci_u256"
path = "src/fibonacci_u256.rs"

[[bin]]
name = "fibonacci_u32_macro_no_alloc"
path = "src/fibonacci_u32_macro_no_alloc.rs"

[[bin]]
name = "fibonacci_u32_macro_bump_alloc"
path = "src/fibonacci_u32_macro_bump_alloc.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false

[dependencies]
polkavm-derive = "0.31.0"
pallet-revive-uapi = { version = "0.10", default-features = false }
picoalloc = "5.2.0"
pvm-contract-macros = { path = "/home/pg/github/cargo-pvm-contract/main/crates/pvm-contract-macros" }
pvm-contract-types = { path = "/home/pg/github/cargo-pvm-contract/main/crates/pvm-contract-types" }
pvm-bump-allocator = { path = "/home/pg/github/cargo-pvm-contract/main/crates/pvm-bump-allocator" }
ruint = { version = "1.17", default-features = false }

[build-dependencies]
cargo-pvm-contract-builder = { path = "/home/pg/github/cargo-pvm-contract/main/crates/cargo-pvm-contract-builder" }
