[package]
name = "pvm-dsl-contracts"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[[bin]]
name = "fibonacci_u32_dsl"
path = "src/fibonacci_u32_dsl.rs"

[[bin]]
name = "computation_dsl"
path = "src/computation_dsl.rs"

[[bin]]
name = "flipper_dsl"
path = "src/flipper_dsl.rs"

[[bin]]
name = "incrementer_dsl"
path = "src/incrementer_dsl.rs"

[[bin]]
name = "bench_storage_dsl"
path = "src/bench_storage_dsl.rs"

[[bin]]
name = "simple_token_u256_dsl"
path = "src/simple_token_u256_dsl.rs"

[[bin]]
name = "bench_erc20_dsl"
path = "src/bench_erc20_dsl.rs"

[[bin]]
name = "bench_erc721_dsl"
path = "src/bench_erc721_dsl.rs"

[[bin]]
name = "bench_erc1155_dsl"
path = "src/bench_erc1155_dsl.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false

[dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract.git", branch = "main", features = ["alloc"] }
pvm-contract-builder-dsl = { git = "https://github.com/paritytech/cargo-pvm-contract.git", branch = "main" }
polkavm-derive = "0.31.0"
pvm-bump-allocator = { git = "https://github.com/paritytech/cargo-pvm-contract.git", branch = "main" }

[build-dependencies]
cargo-pvm-contract-builder = { git = "https://github.com/paritytech/cargo-pvm-contract.git", branch = "main" }
