[package]
name = "pc-dotns"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Protocol Commons DotNS naming contract for pallet-revive"

[[bin]]
name = "dotns"
path = "src/main.rs"

[dependencies]
pc-revive-common.workspace = true
parity-scale-codec.workspace = true
polkavm-derive.workspace = true

[features]
default = []
