[package]
name = "pc-non-fungible-credential"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Protocol Commons NonFungibleCredential contract for pallet-revive"

[[bin]]
name = "non_fungible_credential"
path = "src/main.rs"

[dependencies]
pc-revive-common.workspace = true
parity-scale-codec.workspace = true
polkavm-derive.workspace = true

[features]
default = []
