[package]
name = "pc-key-registry"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Protocol Commons KeyRegistry contract for X3DH key management on pallet-revive"

[[bin]]
name = "key_registry"
path = "src/main.rs"

[dependencies]
pc-revive-common = { path = "../../common" }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
polkavm-derive = "0.27"

# Ed25519 signature verification (no_std compatible)
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "zeroize"] }

[features]
default = []
# Enable signature verification (adds ~50KB to contract size)
verify-signatures = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
