[package]
name = "pc-non-fungible-credential"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Protocol Commons NonFungibleCredential contract for pallet-revive"

[[bin]]
name = "non_fungible_credential"
path = "src/main.rs"

[dependencies]
pc-revive-common = { path = "../../common" }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
polkavm-derive = "0.27"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
